[package]
name = "ambergris"
version = "0.1.0"
authors = ["Redwarp <redwarp@gmail.com>"]
edition = "2018"
description = "Every journey must start somewhere."
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.7.3"
legion = "0.3.1"
torchbearer = { path = "torchbearer" }
piston_window = "0.113.0"
piston2d-graphics = "0.37.0"
graphics_buffer = "0.7.5"

[workspace]
members = ["torchbearer"]

[profile.release]
lto = true
