[package]
name = "ambergris"
version = "0.1.0"
authors = ["Redwarp <redwarp@gmail.com>"]
edition = "2021"
description = "Every journey must start somewhere."
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"
legion = "0.4"
torchbearer = "0.5"
piston_window = "0.121"
piston2d-graphics = "0.41"

[profile.release]
lto = true
