[package]
name = "ambergris"
version = "0.1.0"
authors = ["Redwarp <redwarp@gmail.com>"]
edition = "2021"
description = "Every journey must start somewhere."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.9"
bevy-inspector-egui = "0.14.0"
torchbearer = "0.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
