[package]
name = "torchbearer"
version = "0.3.0"
authors = ["Redwarp <redwarp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
bracket-pathfinding = "0.8.1"
criterion = "0.3.3"
rand = "0.7.3"
tcod = "0.15.0"

[[bench]]
name = "fov_bench"
harness = false

[[bench]]
name = "astar_bench"
harness = false

[profile.release]
lto = true
