[package]
name = "torchbearer"
version = "0.3.5"
authors = ["Redwarp <redwarp@gmail.com>"]
edition = "2018"
description = "Find your path in darkerer dungeons."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/redwarp/ambergris/tree/main/torchbearer"
keywords = ["gamedev", "pathfinding", "field-of-view"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
bracket-pathfinding = "0.8.1"
criterion = "0.3.3"
rand = "0.7.3"
tcod = "0.15.0"

[[bench]]
name = "fov"
harness = false

[[bench]]
name = "path"
harness = false

[profile.release]
lto = true
