[package]
name = "torchbearer_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pixels = "0.7.0"
find_folder = "0.3.0"
winit = "0.25"
winit_input_helper = "0.10.0"
env_logger = "0.9.0"
log = "0.4.14"
tiny-skia = "0.6.1"
torchbearer = { path = ".." }
